andando avanti con modifiche a capitolo 1

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,8 +2,8 @@
   "pdfExportSettings": {
     "includeName": true,
     "pageSize": "A4",
-    "landscape": false,
-    "margin": "0",
-    "downscalePercent": 100
+    "landscape": true,
+    "margin": "2",
+    "downscalePercent": 90
   }
 }
