--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,7 +2,7 @@
   "pdfExportSettings": {
     "includeName": true,
     "pageSize": "A4",
-    "landscape": true,
+    "landscape": false,
     "margin": "2",
     "downscalePercent": 90
   }
